# aspire

./: .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  sonar-project.properties  vcpkg-configuration.json  vcpkg.json
.devcontainer/: configure-nuget.sh  configure.sh  devcontainer.env  devcontainer.json  get-vcpkg.sh  post-create.sh  postcreate.sh
.devcontainer/android/: devcontainer.json  postcreate.sh
.devcontainer/linux/: devcontainer.json  postcreate.sh
.github/workflows/: gcc.yml  msvc.yaml  msvc.yml
app/: Action.qml  CMakeLists.txt  main.cpp  main.qml
app/aspire/: CMakeLists.txt  main.cpp
app/edh/: Actions.qml  CMakeLists.txt  Counter.qml  IconLayout.qml  LayoutEDH.qml  Main.qml  MenuEDH.qml  MenuItem.qml  MenuLayout.qml  MenuLife.qml  ModelPlayers.qml  PopupLayout.qml  PopupReset.qml  RadialMenu.qml  Style.qml  TabGrid.qml  TextEDH.qml  main.cpp
app/edhstats/: CMakeLists.txt  main.cpp  main.qml
app/edit/: CMakeLists.txt  Main.qml  Square.qml  main.cpp
app/editor/: CMakeLists.txt  Main.qml  Test.qml  main.cpp
app/pong/: Ball.h  CMakeLists.txt  Main.qml  Menu.cpp  Menu.h  Paddle.cpp  Paddle.h  main.cpp
app/shapes/: AppState.qml  CMakeLists.txt  Subscribe.qml  main.qml
cmake/: project_add_executable.cmake  project_add_library.cmake  project_add_module.cmake  project_add_qml_module.cmake  project_compile_options.cmake  project_gen_export.cmake
cmake/preset/: config-arm64-android.json  config-arm64-osx.json  config-arm64-windows.json  config-x64-android.json  config-x64-linux.json  config-x64-windows.json  default-build-dir.json  default-linux.json  default-osx.json  default-windows.json  host-arm64-osx.json  target-arm64-android.json  target-x64-linux.json  use-clang.json  use-gcc.json  use-msvc.json  use-visualstudio.json
example/pong/: main.cpp
include/aspire/: Aspire.h  Bitmask.h  BufferObject.h  BufferObjectVertex.h  Camera.h  Entity.h  Event.h  FrameMetrics.h  Geometry.h  Meters.h  ModelEntity.h  Node.h  NodeGeometry.h  Primitive.h  PrimitiveDrawArrays.h  Program.h  Shader.h  State.h  Vertex.h  Visitor.h  VisitorCollect.h  Window.h
include/aspire/core/: Concept.h  EnumMask.h  Event.h  EventTimer.h  Kernel.h  Object.h  Pimpl.h  PimplImpl.h  Point.h  PointF.h  Service.h  Signal.h  Slot.h  Timer.h
include/aspire/graphics/: Color.h  Event.h  Vertex.h  Window.h
include/aspire/gui/: Context.h  EventMouse.h  Surface.h  Window.h
include/aspire/math/: Point.h
include/aspire/render/: Event.h  EventMouse.h  EventWindow.h  Window.h
include/aspire/scene/: Color.h  Node.h  NodeGeometry.h  NodeRectangle.h  NodeTransform.h  Rectangle.h  Window.h
include/aspire/test/: Kernel.h  Test.h  Unit.h
include/aspire/widget/: Color.h  Widget.h  Window.h
module/: CMakeLists.txt
module/aspire/: Aspire.cpp  Aspire.h  ButtonCircle.qml  CMakeLists.txt  Counter.qml  FactoryComponent.cpp  FactoryComponent.h  FactoryQQmlComponent.cpp  FactoryQQmlComponent.h  Fonts.qml  FrameMetrics.h  Icons.qml  ImageSVG.qml  ItemView.cpp  ItemView.h  ItemView.qml  Meters.cpp  ModelTreeItem.cpp  ModelTreeItem.h  ParseQmlTypes.cpp  ParseQmlTypes.h  Square.qml  WriteFileQML.cpp  WriteFileQML.h
module/aspire/test/: CMakeLists.txt  Meters.test.cpp  ParseQmlTypes.test.cpp  WriteFileQML.test.cpp  main.cpp
ports/sdl3/: portfile.cmake  vcpkg.json
ports/sdl3-image/: portfile.cmake  vcpkg.json
ports/sdl3-mixer/: portfile.cmake  vcpkg.json
ports/sdl3-ttf/: portfile.cmake  vcpkg.json
src/: Aspire.cpp  BufferObject.cpp  BufferObjectVertex.cpp  CMakeLists.txt  Camera.cpp  Entity.cpp  FrameMetrics.cpp  Geometry.cpp  ModelEntity.cpp  Node.cpp  NodeGeometry.cpp  Primitive.cpp  PrimitiveDrawArrays.cpp  Program.cpp  Shader.cpp  State.cpp  Visitor.cpp  Window.cpp
src/core/: CMakeLists.txt  Event.cpp  EventTimer.cpp  Kernel.cpp  Object.cpp  Point.cpp  PointF.cpp  Signal.cpp  Slot.cpp  Timer.cpp
src/core/test/: CMakeLists.txt  Object.test.cpp  Point.test.cpp  PointF.test.cpp
src/graphics/: CMakeLists.txt  Color.cpp  Window.cpp
src/gui/: CMakeLists.txt  Context.cpp  ContextWin32.cpp  ContextWin32.h  EventMouse.cpp  Window.cpp  WindowWin32.cpp  WindowX11.cpp
src/math/: CMakeLists.txt  Point.cpp
src/render/: CMakeLists.txt  VulkanInstance.cpp  VulkanInstance.h  Window.cpp
src/render/test/: CMakeLists.txt
src/scene/: CMakeLists.txt  Node.cpp  NodeGeometry.cpp  NodeRectangle.cpp  NodeTransform.cpp  Rectangle.cpp  Window.cpp
src/scene/test/: CMakeLists.txt  Node.test.cpp  Rectangle.test.cpp  Window.test.cpp
src/test/: CMakeLists.txt  Kernel.cpp  Test.cpp  Unit.cpp
src/widget/: BatchRenderer.cpp  BatchRenderer.h  CMakeLists.txt  Widget.cpp  Window.cpp
src/widget/test/: CMakeLists.txt  Widget.test.cpp  Window.test.cpp
test/: Bitmask.test.cpp  CMakeLists.txt  Node.test.cpp  Visitor.test.cpp  VisitorCollect.test.cpp  Window.test.cpp
test/core/: CMakeLists.txt  Signal.test.cpp  main.cpp
triplets/: arm64-android-aspire.cmake  arm64-android-qt.cmake  arm64-android.cmake  arm64-osx-aspire.cmake  arm64-osx-dynamic-release.cmake  arm64-windows-aspire.cmake  arm64-windows.cmake  x64-android-aspire.cmake  x64-android.cmake  x64-linux-aspire.cmake  x64-windows-aspire.cmake  x64-windows.cmake
